Added default location values to search form

--- a/app/templates/searchform.html
+++ b/app/templates/searchform.html
@@ -24,8 +24,8 @@
                 {{ form.order(class="form-control", id="order") }}
             </div>
         </div>
-        {{ form.lat(id="latitude") }}
-        {{ form.lng(id="longitude") }}
+        {{ form.lat(id="latitude", value="0") }}
+        {{ form.lng(id="longitude", value="0") }}
         <div class="col-sm-11"></div>
         <div class="col-sm-1">
             <button type="submit" class="btn btn-primary mb-2 row-buffer">Search</button>
